manifest/monitoring/dashboard/local/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: dashboard
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/dashboard-gateway
  http:
    - match:
        - uri:
            prefix: "/api/v1/login"
        - uri:
            prefix: "/api/v1/csrftoken/login"
        - uri:
            prefix: "/api/v1/me"
      route:
        - destination:
            host: kubernetes-dashboard-auth.dashboard.svc.cluster.local
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/api"
        - uri:
            prefix: "/metrics"
      route:
        - destination:
            host: kubernetes-dashboard-api.dashboard.svc.cluster.local
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: kubernetes-dashboard-web.dashboard.svc.cluster.local
            port:
              number: 8000
